[DUOS-1290][risk=medium] Multi-vote API (#1374)
* multi-vote API implementation